# exchange_lob

./: .gitignore  CMakeLists.txt  README.md  agentBase.cpp  agentBase.h  cda_engine.cpp  cda_engine.h  fundamentalTrader.cpp  fundamentalTrader.h  fundamentalValue.h  hmomentumTrader.cpp  hmomentumTrader.h  insTrader.cpp  insTrader.h  main.cpp  marketMaker.cpp  marketMaker.h  momentumTrader.cpp  momentumTrader.h  momentumValue.h  params.h  simulator.cpp  simulator.h  spikeTrader.cpp  spikeTrader.h  ziTrader.cpp  ziTrader.h
Workflow/: CME_cali_flashcrash.ipynb  CME_cali_spike.ipynb  CMEdataUtil.py  Market_Stats.ipynb  cme_data_dynamic.ipynb  extract_cme_data.py  extract_cme_trades.py  gsl_div_util.py
Workflow/.ipynb_checkpoints/: CME_cali_flashcrash-checkpoint.ipynb  CME_cali_spike-checkpoint.ipynb  cme_calibration-checkpoint.ipynb  cme_data_dynamic-checkpoint.ipynb  example-checkpoint.ipynb
Workflow/CMECalibration/: calibration_utils.py  distance_calc.py  kalman_fv.py  main.py  moment_coverage_util.py  params.py  xgboost_surrogate.py
Workflow/Calibration/: calibration_method_gp.ipynb  calibration_method_xgboost.ipynb  compare_historical_simulated.ipynb  final_methodology_calibration.ipynb  final_methodology_validation.ipynb  functions.py  multiple_run_3params_chiarellaLOB.ipynb  (+2 more)
Workflow/Fixie/: __init__.py
figure/: broker.docx  concentration.docx  flow.docx
tmp/: Adjust_orders_between_days.ipynb  CME.ipynb  CMEdataUtil.py  KS_test_null_distribution.pkl  README.md  TRQX.ipynb  cme_data_parser.ipynb  example.ipynb  handle_CME_data.py  order_analysis.ipynb  trqx.py
(+14 files in other folders)
